# EmbarcaTech_Acerte_a_Senha

./: Acerteasenha.c  CMakeLists.txt  README.md  diagram.json  wokwi.toml
Acerteasenha/: Acerteasenha.c  CMakeLists.txt  LED_Verde_vermelho.c  diagram.json  wokwi.toml
Acerteasenha/tests/: test_main.cpp
